// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync application should fail on invalid enum values at creation when a command menu item availabilityType is lowercase 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "commandMenuItem": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "global" for availabilityType, expected one of: GLOBAL, GLOBAL_OBJECT_CONTEXT, RECORD_SELECTION, FALLBACK",
              "userFriendlyMessage": "Invalid value "global" for availabilityType",
              "value": "global",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "commandMenuItem",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 commandMenuItem",
    "summary": {
      "commandMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "global" for availabilityType",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a field type is a typo 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "TEXTT" for type, expected one of: ACTOR, ADDRESS, ARRAY, BOOLEAN, CURRENCY, DATE, DATE_TIME, EMAILS, FILES, FULL_NAME, LINKS, MORPH_RELATION, MULTI_SELECT, NUMBER, NUMERIC, PHONES, POSITION, RATING, RAW_JSON, RELATION, RICH_TEXT, SELECT, TEXT, TS_VECTOR, UUID",
              "userFriendlyMessage": "Invalid value "TEXTT" for type",
              "value": "TEXTT",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 2 viewFields",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 3,
      "viewField": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a field type is inherited from Object.prototype (constructor) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "constructor" for type, expected one of: ACTOR, ADDRESS, ARRAY, BOOLEAN, CURRENCY, DATE, DATE_TIME, EMAILS, FILES, FULL_NAME, LINKS, MORPH_RELATION, MULTI_SELECT, NUMBER, NUMERIC, PHONES, POSITION, RATING, RAW_JSON, RELATION, RICH_TEXT, SELECT, TEXT, TS_VECTOR, UUID",
              "userFriendlyMessage": "Invalid value "constructor" for type",
              "value": "constructor",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 2 viewFields",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 3,
      "viewField": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a field type is inherited from Object.prototype (toString) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "toString" for type, expected one of: ACTOR, ADDRESS, ARRAY, BOOLEAN, CURRENCY, DATE, DATE_TIME, EMAILS, FILES, FULL_NAME, LINKS, MORPH_RELATION, MULTI_SELECT, NUMBER, NUMERIC, PHONES, POSITION, RATING, RAW_JSON, RELATION, RICH_TEXT, SELECT, TEXT, TS_VECTOR, UUID",
              "userFriendlyMessage": "Invalid value "toString" for type",
              "value": "toString",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 2 viewFields",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 3,
      "viewField": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a field writability is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "READ_ONLY" for writability, expected one of: OPEN, APPLICATION, SYSTEM",
              "userFriendlyMessage": "Invalid value "READ_ONLY" for writability",
              "value": "READ_ONLY",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 2 viewFields",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 3,
      "viewField": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a page layout type is a typo 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "pageLayout": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "RECORD_PAGES" for type, expected one of: RECORD_INDEX, RECORD_PAGE, DASHBOARD, STANDALONE_PAGE, RECORD_FORM",
              "userFriendlyMessage": "Invalid value "RECORD_PAGES" for type",
              "value": "RECORD_PAGES",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayout",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 pageLayout",
    "summary": {
      "pageLayout": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "RECORD_PAGES" for type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a page layout widget type is inherited from Object.prototype 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "pageLayoutWidget": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "constructor" for type, expected one of: VIEW, IFRAME, FIELD, FIELDS, GRAPH, STANDALONE_RICH_TEXT, TIMELINE, TASKS, NOTES, FILES, EMAILS, CALENDAR, FIELD_RICH_TEXT, WORKFLOW, WORKFLOW_VERSION, WORKFLOW_RUN, FRONT_COMPONENT, RECORD_TABLE, EMAIL_THREAD, CALL_RECORDING_SUMMARY, CALL_RECORDING_TRANSCRIPT, MESSAGE_CAMPAIGN_BODY, MESSAGE_CAMPAIGN_DETAILS, FORM_FIELD, CHAT_THREADS, CHAT",
              "userFriendlyMessage": "Invalid value "constructor" for type",
              "value": "constructor",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 pageLayoutWidget",
    "summary": {
      "pageLayoutWidget": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "constructor" for type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a row level permission predicate group logicalOperator comes from the view filter group enum 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "rowLevelPermissionPredicate": [
        {
          "errors": [
            {
              "code": "INVALID_ROW_LEVEL_PERMISSION_PREDICATE_DATA",
              "message": "Row level permission predicate group not found",
              "userFriendlyMessage": "Row level permission predicate group not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "rowLevelPermissionPredicate",
          "status": "fail",
          "type": "create",
        },
      ],
      "rowLevelPermissionPredicateGroup": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "NOT" for logicalOperator, expected one of: AND, OR",
              "userFriendlyMessage": "Invalid value "NOT" for logicalOperator",
              "value": "NOT",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "rowLevelPermissionPredicateGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 rowLevelPermissionPredicate, 1 rowLevelPermissionPredicateGroup",
    "summary": {
      "rowLevelPermissionPredicate": 1,
      "rowLevelPermissionPredicateGroup": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a row level permission predicate operand is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "rowLevelPermissionPredicate": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "EQUALS" for operand, expected one of: IS, IS_NOT_NULL, IS_NOT, LESS_THAN_OR_EQUAL, GREATER_THAN_OR_EQUAL, IS_BEFORE, IS_AFTER, CONTAINS, DOES_NOT_CONTAIN, IS_EMPTY, IS_NOT_EMPTY, IS_RELATIVE, IS_IN_PAST, IS_IN_FUTURE, IS_TODAY, VECTOR_SEARCH",
              "userFriendlyMessage": "Invalid value "EQUALS" for operand",
              "value": "EQUALS",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "rowLevelPermissionPredicate",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 rowLevelPermissionPredicate",
    "summary": {
      "rowLevelPermissionPredicate": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "EQUALS" for operand",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view calendarLayout is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "YEAR" for calendarLayout, expected one of: DAY, WEEK, MONTH",
              "userFriendlyMessage": "Invalid value "YEAR" for calendarLayout",
              "value": "YEAR",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "VIEW_NOT_FOUND",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 view, 1 viewField, 1 viewFilterGroup",
    "summary": {
      "totalErrors": 3,
      "view": 1,
      "viewField": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view field aggregateOperation is lowercase 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "sum" for aggregateOperation, expected one of: MIN, MAX, AVG, SUM, COUNT, COUNT_UNIQUE_VALUES, COUNT_EMPTY, COUNT_NOT_EMPTY, COUNT_TRUE, COUNT_FALSE, PERCENTAGE_EMPTY, PERCENTAGE_NOT_EMPTY",
              "userFriendlyMessage": "Invalid value "sum" for aggregateOperation",
              "value": "sum",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Invalid value "sum" for aggregateOperation",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view filter group logicalOperator is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "XOR" for logicalOperator, expected one of: AND, OR, NOT",
              "userFriendlyMessage": "Invalid value "XOR" for logicalOperator",
              "value": "XOR",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewFilterGroup",
    "summary": {
      "totalErrors": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Invalid value "XOR" for logicalOperator",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view kanbanAggregateOperation is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "TOTAL" for kanbanAggregateOperation, expected one of: MIN, MAX, AVG, SUM, COUNT, COUNT_UNIQUE_VALUES, COUNT_EMPTY, COUNT_NOT_EMPTY, COUNT_TRUE, COUNT_FALSE, PERCENTAGE_EMPTY, PERCENTAGE_NOT_EMPTY",
              "userFriendlyMessage": "Invalid value "TOTAL" for kanbanAggregateOperation",
              "value": "TOTAL",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "VIEW_NOT_FOUND",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 view, 1 viewField, 1 viewFilterGroup",
    "summary": {
      "totalErrors": 3,
      "view": 1,
      "viewField": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view openRecordIn comes from the object enum 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "USER_CHOICE" for openRecordIn, expected one of: SIDE_PANEL, RECORD_PAGE",
              "userFriendlyMessage": "Invalid value "USER_CHOICE" for openRecordIn",
              "value": "USER_CHOICE",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "VIEW_NOT_FOUND",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 view, 1 viewField, 1 viewFilterGroup",
    "summary": {
      "totalErrors": 3,
      "view": 1,
      "viewField": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view type is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "GRID" for type, expected one of: TABLE, KANBAN, CALENDAR, LIST, FIELDS_WIDGET, TABLE_WIDGET, KANBAN_WIDGET, LIST_WIDGET, CALENDAR_WIDGET",
              "userFriendlyMessage": "Invalid value "GRID" for type",
              "value": "GRID",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "VIEW_NOT_FOUND",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 view, 1 viewField, 1 viewFilterGroup",
    "summary": {
      "totalErrors": 3,
      "view": 1,
      "viewField": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when a view visibility is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "PUBLIC" for visibility, expected one of: WORKSPACE, UNLISTED",
              "userFriendlyMessage": "Invalid value "PUBLIC" for visibility",
              "value": "PUBLIC",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "VIEW_NOT_FOUND",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 view, 1 viewField, 1 viewFilterGroup",
    "summary": {
      "totalErrors": 3,
      "view": 1,
      "viewField": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when an index type is not supported 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "index": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "HASH" for indexType, expected one of: BTREE, GIN",
              "userFriendlyMessage": "Invalid value "HASH" for indexType",
              "value": "HASH",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 index",
    "summary": {
      "index": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "HASH" for indexType",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at creation when every object enum property is invalid 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "name",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "code",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "createdAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "createdBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "deletedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "position",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "updatedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "updatedBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "timelineActivities",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Relation target object metadata not found",
              "userFriendlyMessage": "Object targeted by the relation not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "targetEnumSubject",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "attachments",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Relation target object metadata not found",
              "userFriendlyMessage": "Object targeted by the relation not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "targetEnumSubject",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "noteTargets",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Relation target object metadata not found",
              "userFriendlyMessage": "Object targeted by the relation not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "targetEnumSubject",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "taskTargets",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Relation target object metadata not found",
              "userFriendlyMessage": "Object targeted by the relation not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "targetEnumSubject",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Field to create related object not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "agentChatThreadTargets",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Relation target object metadata not found",
              "userFriendlyMessage": "Object targeted by the relation not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "targetEnumSubject",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_ba07b22052f46d8e7dfe01a350b",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_559adc9d265ebb0f38b79027b99",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_5d770d74c596f08ceffe7406637",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_e05b49ba6af6fcd5c2e0bda6ada",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_7f1d3873700fe9e5d19b38b1ff3",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INDEX_OBJECT_NOT_FOUND",
              "message": "Could not find index related object metadata",
              "userFriendlyMessage": "Index related object not found",
            },
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_f4e28ea0548f876a77184585b0d",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "side_panel" for openRecordIn, expected one of: SIDE_PANEL, RECORD_PAGE, USER_CHOICE",
              "userFriendlyMessage": "Invalid value "side_panel" for openRecordIn",
              "value": "side_panel",
            },
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "open" for writability, expected one of: OPEN, APPLICATION, SYSTEM",
              "userFriendlyMessage": "Invalid value "open" for writability",
              "value": "open",
            },
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "PUBLIC" for readability, expected one of: OPEN, PRIVATE, INHERITED, APPLICATION, SYSTEM",
              "userFriendlyMessage": "Invalid value "PUBLIC" for readability",
              "value": "PUBLIC",
            },
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "WORKSPACES" for sharingReach, expected one of: ROLE_ACCESS, WORKSPACE",
              "userFriendlyMessage": "Invalid value "WORKSPACES" for sharingReach",
              "value": "WORKSPACES",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "pageLayout": [
        {
          "errors": [
            {
              "code": "INVALID_PAGE_LAYOUT_DATA",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Object metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "Default Enum Subject Layout",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayout",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_PAGE_LAYOUT_DATA",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Object metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "Creation Form",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayout",
          "status": "fail",
          "type": "create",
        },
      ],
      "pageLayoutTab": [
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_NOT_FOUND",
              "message": "Page layout not found",
              "userFriendlyMessage": "Page layout not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "Home",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutTab",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_NOT_FOUND",
              "message": "Page layout not found",
              "userFriendlyMessage": "Page layout not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "Timeline",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutTab",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_NOT_FOUND",
              "message": "Page layout not found",
              "userFriendlyMessage": "Page layout not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "Tasks",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutTab",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_NOT_FOUND",
              "message": "Page layout not found",
              "userFriendlyMessage": "Page layout not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "Notes",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutTab",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_NOT_FOUND",
              "message": "Page layout not found",
              "userFriendlyMessage": "Page layout not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "Files",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutTab",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_NOT_FOUND",
              "message": "Page layout not found",
              "userFriendlyMessage": "Page layout not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "Fields",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutTab",
          "status": "fail",
          "type": "create",
        },
      ],
      "pageLayoutWidget": [
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "pageLayoutTabUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "pageLayoutTabUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "pageLayoutTabUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "pageLayoutTabUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "pageLayoutTabUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "pageLayoutTabUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "pageLayoutTabUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayoutWidget",
          "status": "fail",
          "type": "create",
        },
      ],
      "searchFieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_NOT_FOUND",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "TS_VECTOR_FIELD_METADATA_NOT_FOUND",
              "message": "TS_VECTOR field metadata not found",
              "userFriendlyMessage": "Search vector field not found",
            },
            {
              "code": "OBJECT_METADATA_NOT_FOUND",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Object metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "searchFieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Object metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Object metadata not found",
              "userFriendlyMessage": "Object metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "create",
        },
      ],
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 20 fieldMetadata, 1 objectMetadata, 2 views, 11 viewFields, 6 indices, 2 pageLayouts, 7 pageLayoutWidgets, 6 pageLayoutTabs, 1 searchFieldMetadata",
    "summary": {
      "fieldMetadata": 20,
      "index": 6,
      "objectMetadata": 1,
      "pageLayout": 2,
      "pageLayoutTab": 6,
      "pageLayoutWidget": 7,
      "searchFieldMetadata": 1,
      "totalErrors": 56,
      "view": 2,
      "viewField": 11,
    },
    "userFriendlyMessage": "Many validation errors",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a field writability is updated to an unknown value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "LOCKED" for writability, expected one of: OPEN, APPLICATION, SYSTEM",
              "userFriendlyMessage": "Invalid value "LOCKED" for writability",
              "value": "LOCKED",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "LOCKED" for writability",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a page layout type is updated to an unknown value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "pageLayout": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "HOME_PAGE" for type, expected one of: RECORD_INDEX, RECORD_PAGE, DASHBOARD, STANDALONE_PAGE, RECORD_FORM",
              "userFriendlyMessage": "Invalid value "HOME_PAGE" for type",
              "value": "HOME_PAGE",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "pageLayout",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 pageLayout",
    "summary": {
      "pageLayout": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "HOME_PAGE" for type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a row level permission predicate group logicalOperator is updated to an unknown value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "rowLevelPermissionPredicateGroup": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "XOR" for logicalOperator, expected one of: AND, OR",
              "userFriendlyMessage": "Invalid value "XOR" for logicalOperator",
              "value": "XOR",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "rowLevelPermissionPredicateGroup",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 rowLevelPermissionPredicateGroup",
    "summary": {
      "rowLevelPermissionPredicateGroup": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "XOR" for logicalOperator",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a row level permission predicate operand is updated to lowercase 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "rowLevelPermissionPredicate": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "is" for operand, expected one of: IS, IS_NOT_NULL, IS_NOT, LESS_THAN_OR_EQUAL, GREATER_THAN_OR_EQUAL, IS_BEFORE, IS_AFTER, CONTAINS, DOES_NOT_CONTAIN, IS_EMPTY, IS_NOT_EMPTY, IS_RELATIVE, IS_IN_PAST, IS_IN_FUTURE, IS_TODAY, VECTOR_SEARCH",
              "userFriendlyMessage": "Invalid value "is" for operand",
              "value": "is",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "rowLevelPermissionPredicate",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 rowLevelPermissionPredicate",
    "summary": {
      "rowLevelPermissionPredicate": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "is" for operand",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a view field aggregateOperation is updated to a typo 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "AVERAGE" for aggregateOperation, expected one of: MIN, MAX, AVG, SUM, COUNT, COUNT_UNIQUE_VALUES, COUNT_EMPTY, COUNT_NOT_EMPTY, COUNT_TRUE, COUNT_FALSE, PERCENTAGE_EMPTY, PERCENTAGE_NOT_EMPTY",
              "userFriendlyMessage": "Invalid value "AVERAGE" for aggregateOperation",
              "value": "AVERAGE",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Invalid value "AVERAGE" for aggregateOperation",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a view filter group logicalOperator is updated to lowercase 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewFilterGroup": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "or" for logicalOperator, expected one of: AND, OR, NOT",
              "userFriendlyMessage": "Invalid value "or" for logicalOperator",
              "value": "or",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewFilterGroup",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 viewFilterGroup",
    "summary": {
      "totalErrors": 1,
      "viewFilterGroup": 1,
    },
    "userFriendlyMessage": "Invalid value "or" for logicalOperator",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when a view type is updated to an unknown value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "view": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "BOARD" for type, expected one of: TABLE, KANBAN, CALENDAR, LIST, FIELDS_WIDGET, TABLE_WIDGET, KANBAN_WIDGET, LIST_WIDGET, CALENDAR_WIDGET",
              "userFriendlyMessage": "Invalid value "BOARD" for type",
              "value": "BOARD",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "view",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 view",
    "summary": {
      "totalErrors": 1,
      "view": 1,
    },
    "userFriendlyMessage": "Invalid value "BOARD" for type",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when an index type is updated to an unsupported value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "index": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "gin" for indexType, expected one of: BTREE, GIN",
              "userFriendlyMessage": "Invalid value "gin" for indexType",
              "value": "gin",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 index",
    "summary": {
      "index": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "gin" for indexType",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when an object openRecordIn is updated to a lowercase value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "record_page" for openRecordIn, expected one of: SIDE_PANEL, RECORD_PAGE, USER_CHOICE",
              "userFriendlyMessage": "Invalid value "record_page" for openRecordIn",
              "value": "record_page",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 objectMetadata",
    "summary": {
      "objectMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "record_page" for openRecordIn",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid enum values at update when an object sharingReach is updated to an unknown value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_ENUM_VALUE",
              "message": "Invalid value "EVERYONE" for sharingReach, expected one of: ROLE_ACCESS, WORKSPACE",
              "userFriendlyMessage": "Invalid value "EVERYONE" for sharingReach",
              "value": "EVERYONE",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "objectMetadata",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 objectMetadata",
    "summary": {
      "objectMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Invalid value "EVERYONE" for sharingReach",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
